<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_edit_size"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/sizeValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/sizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="20"
        android:max="120"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin_top"
        android:paddingBottom="@dimen/default_margin_top">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pet_button_background"
            android:text="@string/pet_cancel" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/pet_button_background"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/pet_confirm" />
    </LinearLayout>

</LinearLayout>
